IB-12099: API - Get Hold Transactions
